backend/backend.err
C:\Users\Bhara\TravelRouteAI\backend\src\services\indianCultureService.js:172
      { title: 'Pandwani', description: 'Folk music tradition narrating stories of the Mahabharata's Pandavas through song and drama.' },
                                                                                                   ^

SyntaxError: Unexpected identifier 's'
    at wrapSafe (node:internal/modules/cjs/loader:1762:18)
    at Module._compile (node:internal/modules/cjs/loader:1803:20)
    at Object..js (node:internal/modules/cjs/loader:1969:10)
    at Module.load (node:internal/modules/cjs/loader:1552:32)
    at Module._load (node:internal/modules/cjs/loader:1354:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at Module.require (node:internal/modules/cjs/loader:1575:12)
    at require (node:internal/modules/helpers:191:16)
    at Object.<anonymous> (C:\Users\Bhara\TravelRouteAI\backend\src\controllers\cultureController.js:1:24)
    at Module._compile (node:internal/modules/cjs/loader:1829:14)

Node.js v26.0.0
